// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtCountdown should render default AtCountdown 1`] = `
<view
  class="at-countdown"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- class 1`] = `
<view
  class="test at-countdown test"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- day 1`] = `
<view
  class="at-countdown"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        24
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- format 1`] = `
<view
  class="at-countdown"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      :
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      :
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    />
  </view>
</view>
`;

exports[`AtCountdown should render prop -- hours 1`] = `
<view
  class="at-countdown"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        01
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- hours when > 24 and not show day 1`] = `
<view
  class="at-countdown"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        25
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- hours when > 24 and show day 1`] = `
<view
  class="at-countdown"
>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        01
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      天
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        01
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- isCard 1`] = `
<view
  class="at-countdown at-countdown--card"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- isShowDay 1`] = `
<view
  class="at-countdown"
>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      天
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- minutes 1`] = `
<view
  class="at-countdown"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        01
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- seconds 1`] = `
<view
  class="at-countdown"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        01
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;

exports[`AtCountdown should render prop -- style 1`] = `
<view
  class="at-countdown"
  style="color: red;"
>
  <!---->
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      时
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      分
    </text>
  </view>
  <view
    class="at-countdown__item"
  >
    <view
      class="at-countdown__time-box"
    >
      <text
        class="at-countdown__time"
      >
        00
      </text>
    </view>
    <text
      class="at-countdown__separator"
    >
      秒
    </text>
  </view>
</view>
`;
